Ensure that card text doesn't overflow

--- a/_sass/ecosystem.scss
+++ b/_sass/ecosystem.scss
@@ -59,6 +59,17 @@
 .ecosystem-cards-wrapper {
   margin-bottom: rem(18px);
   padding-top: rem(20px);
+  .col-md-6 {
+    @media (min-width: 768px) {
+      flex: 0 0 100%;
+      max-width: 100%;
+    }
+
+    @include max-width-desktop {
+      flex: 0 0 50%;
+      max-width: 50%;
+    }
+  }
 }
 
 .ecosystem .main-content-menu {
